Fixed Readability Issue
Change opacity.

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,6 @@ h1 img{
 
 h2 {
 	background-color: #f0021a;
-	opacity: 0.7;
 	box-shadow: 5px 5px 10px 0 #cccccc;
 	border-radius: 5px;
 	color: black;
